# flame-app

./: .gitignore  pyproject.toml  test_grad.py
myapp/chat/: main.py  main2.py
myapp/merge/: main.py
myapp/merge/utils/: utils.py
myapp/summary/: main.py
myapp/translate/: main.py  main2.py
myapp/translate/.gradio/flagged/: dataset1.csv
