[project]
name = "nicemind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.5",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.9",
    "nicegui>=2.5.0",
    "pywebview>=5.3.2",
    "transformers[torch]>=4.46.3",
]
