[project]
name = "nicemind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bingbong>=0.4.3",
    "fastapi>=0.115.5",
    "gradio>=5.6.0",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.9",
    "nicegui>=2.5.0",
    "pingpong>=0.0.1",
    "pywebview>=5.3.2",
    "sseclient-py>=1.8.0",
    "sseclient>=0.0.27",
    "transformers[torch]>=4.46.3",
]
